<resources>
    <string name="app_name">ChatBot</string>
    <string name="ex1">"Write an essay on Pollution"</string>
    <string name="ex2">"Write  Java code to reverse a given number" </string>
    <string name="ex3">"Give creative ideas for a birthday celebration" </string>
    <string name="cap1">Remembers what user said earlier in conversation</string>
    <string name="cap2">Allows user to provide follow-up corrections</string>
    <string name="cap3">Trained to decline inappropriate requests</string>
    <string name="limit1">May occasionally generate incorrect information</string>
    <string name="limit2">May occasionally produce biased content</string>
    <string name="limit3">Limited knowledge of world and events after 2021</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_text">Hello, I am Your Intelligent Companion</string>
    <string name="splash_text">Ask Me Anything</string>
    <string name="about">"Welcome to my ChatBot App! My chatbot is designed to provide quick and convenient assistance to users. Its purpose is to simplify information retrieval and streamline basic tasks. With my chatbot, you can:                                                       Get Instant Answers , Find Information Easily and it is available 24/7, ensuring that you can access assistance whenever you need it. </string>
</resources>